# fast-api-docker

./: Dockerfile  LICENSE  README.md  fast-api-docker-deployment.yaml  fast-api-docker-service.yaml  pyproject.toml
.github/workflows/: new-pr-status-check.yml
app/: main.py
