[project]
name = "fast-api-docker"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "fastapi[standard]>=0.116.1",
]

[dependency-groups]
dev = [
    "ruff>=0.12.12",
]

[tool.ruff]
line-length = 88
exclude = [
    "build",
    ".venv",
    "__pycache__",
    "tests",
]
target-version = "py39"

[tool.ruff.format]
quote-style = "double"

[tool.ruff.lint]
select = [
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "I",    # isort
    "B",    # flake8-bugbear
    "UP",   # pyupgrade
    "C90",  # mccabe complexity
    "N",    # pep8-naming
    "D",    # pydocstyle
    "S",    # flake8-bandit
]
ignore = [
    "D100", # Ignore missing docstring in public module
    "D104", # Ignore missing docstring in public package
]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.isort]
known-first-party = ["your_project_name"]
combine-as-imports = true

[tool.ruff.lint.pydocstyle]
convention = "google"
